--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,8 @@
               app:layout_constraintEnd_toStartOf="@+id/imageView5" android:layout_marginEnd="16dp"
               android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textViewCityFirst"
               android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/textView4"
-              app:layout_constraintStart_toStartOf="@+id/textViewCityFirst" android:background="@color/grey_divider"/>
+              app:layout_constraintStart_toStartOf="@+id/textViewCityFirst" android:background="@color/grey_divider"
+              android:id="@+id/view2"/>
         <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
@@ -68,13 +69,29 @@
                 android:id="@+id/textView4" android:layout_marginBottom="16dp"
                 app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/imageView2"
                 android:layout_marginStart="16dp" android:textSize="18sp" android:textColor="@android:color/black"/>
+        <View android:layout_height="0dp" android:layout_width="0dp"
+              app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toBottomOf="@+id/view2" android:id="@+id/secondDestination"
+              android:background="?android:attr/selectableItemBackground"
+              android:clickable="true">
+
+        </View>
+        <View android:layout_height="0dp" android:layout_width="0dp" android:id="@+id/firstDestination"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintBottom_toTopOf="@+id/secondDestination"
+              android:background="?android:attr/selectableItemBackground"
+              app:layout_constraintTop_toTopOf="parent" android:clickable="true">
+
+        </View>
     </androidx.constraintlayout.widget.ConstraintLayout>
     <Button
             android:text="Найти билеты"
             android:background="@drawable/button_orange_background"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:id="@+id/button" android:layout_marginTop="8dp"
+            android:id="@+id/buttonSearch" android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:textColor="@android:color/white"/>
