--- a/app/src/main/res/layout/activity_search_destination.xml
+++ b/app/src/main/res/layout/activity_search_destination.xml
@@ -7,4 +7,39 @@
         android:layout_height="match_parent"
         tools:context=".SearchDestinationActivity">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
+            android:layout_height="56dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:background="@color/colorPrimary"
+            android:id="@+id/constraintLayout2">
+
+        <ImageView
+                android:layout_width="48dp"
+                android:layout_height="48dp" app:srcCompat="@drawable/ic_close_white_24dp"
+                android:id="@+id/imageViewClose"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" android:padding="8dp"/>
+        <EditText
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:ems="10"
+                android:id="@+id/editText"
+                app:layout_constraintStart_toEndOf="@+id/imageViewClose" android:layout_marginStart="8dp"
+                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" android:hint="Откуда вылет"
+                android:textColorHint="@android:color/white"
+                android:textCursorDrawable="@drawable/edittext_white_cursor"
+                android:textColor="@android:color/white" android:textStyle="bold"
+                android:background="@android:color/transparent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/recyclerView"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
