--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
         <View android:layout_width="0dp" android:layout_height="1dp"
               app:layout_constraintEnd_toStartOf="@+id/imageView5" android:layout_marginEnd="16dp"
               android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/textViewCityFirst"
-              android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/textView4"
+              android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/textViewCitySecond"
               app:layout_constraintStart_toStartOf="@+id/textViewCityFirst" android:background="@color/grey_divider"
               android:id="@+id/view2"/>
         <TextView
@@ -66,7 +66,7 @@
                 android:text="TextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/textView4" android:layout_marginBottom="16dp"
+                android:id="@+id/textViewCitySecond" android:layout_marginBottom="16dp"
                 app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/imageView2"
                 android:layout_marginStart="16dp" android:textSize="18sp" android:textColor="@android:color/black"/>
         <View android:layout_height="0dp" android:layout_width="0dp"
