--- a/app/src/main/res/layout/fragment_plane.xml
+++ b/app/src/main/res/layout/fragment_plane.xml
@@ -5,10 +5,11 @@
              android:layout_height="match_parent"
              tools:context=".fragment.PlaneFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/hello_blank_fragment"/>
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:tools="http://schemas.android.com/tools"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:id="@+id/map"
+              android:name="com.google.android.gms.maps.SupportMapFragment" />
 
 </FrameLayout>
